--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ wp-content/plugins/hello.php
 /readme.html
 /license.txt
 
+/taitaja2017/nbproject/
+/nbproject/
+/enlightenment/nbproject/private/
